# DegiroAPI

./: pyproject.toml
degiroapi/: __init__.py  product.py
