[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "degiroapi"
version = "0.9.9"
description = "An unofficial API for the trading platform Degiro written in Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Lorenz Kraus", email = "lorenz.kraus@gmail.com" },
    { name = "Jakub Loucky", email = "jakub.loucky@gmail.com" }
]

urls = { "Homepage" = "https://github.com/lolokraus/DegiroAPI" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests"
]
